[gd_scene load_steps=12 format=3 uid="uid://1bt2t2jgbtos"]

[ext_resource type="Script" path="res://scenes/terminal_computer.gd" id="1_12f75"]
[ext_resource type="Texture2D" uid="uid://dkimwbya1l66v" path="res://sprites/terminal_computer.png" id="1_hm5o6"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="2_bxupf"]
[ext_resource type="Texture2D" uid="uid://da14xud8tdoj" path="res://sprites/arrows1.png" id="3_q5fdc"]
[ext_resource type="Texture2D" uid="uid://b74uo51q2y58i" path="res://sprites/arrows2.png" id="4_fd7sn"]
[ext_resource type="Script" path="res://scenes/TextEdit.gd" id="6_sqpbu"]
[ext_resource type="PackedScene" uid="uid://bxyls5gbo1c1i" path="res://scenes/Info.tscn" id="7_bwgqr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pcoxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hm5o6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eccn0"]
size = Vector2(56, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_qmq6u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q5fdc")
}, {
"duration": 1.0,
"texture": ExtResource("4_fd7sn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6b3ab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hm5o6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="TerminalComputer" type="Area2D"]
position = Vector2(194, 597)
script = ExtResource("1_12f75")

[node name="Info" parent="." instance=ExtResource("7_bwgqr")]
visible = false
z_index = 4096
position = Vector2(15, -139)

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -11)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pcoxa")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_eccn0")
disabled = true

[node name="display" type="Node2D" parent="."]
position = Vector2(-6, -68)

[node name="back2" type="ColorRect" parent="display"]
visible = false
z_index = 4096
offset_left = -273.0
offset_top = -42.0
offset_right = 277.0
offset_bottom = 37.0

[node name="back" type="ColorRect" parent="display"]
visible = false
z_index = 4096
offset_left = -272.0
offset_top = -41.0
offset_right = 276.0
offset_bottom = 36.0
color = Color(0, 0, 0, 1)

[node name="lbl_item" type="Label" parent="display/back"]
layout_mode = 0
offset_left = 64.0
offset_top = 2.0
offset_right = 535.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_bxupf")
text = "== TERMINAL ==
Hack the world!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="arrows" type="AnimatedSprite2D" parent="display/back"]
position = Vector2(520, 39)
sprite_frames = SubResource("SpriteFrames_qmq6u")
autoplay = "default"

[node name="sprite" type="AnimatedSprite2D" parent="display/back"]
position = Vector2(37, 37)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_6b3ab")

[node name="Terminal" type="ColorRect" parent="display"]
visible = false
z_index = 4096
z_as_relative = false
offset_left = -321.0
offset_top = -95.0
offset_right = 379.0
offset_bottom = 240.0
color = Color(0.203922, 0.164706, 0.592157, 1)

[node name="TextEdit" type="TextEdit" parent="display/Terminal" node_paths=PackedStringArray("TerminalManager")]
layout_mode = 0
offset_left = 1.0
offset_right = 704.0
offset_bottom = 334.0
mouse_filter = 2
mouse_default_cursor_shape = 16
theme_override_fonts/font = ExtResource("2_bxupf")
text = "














































































































































"
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
caret_blink = true
caret_draw_when_editable_disabled = true
script = ExtResource("6_sqpbu")
TerminalManager = NodePath("../../..")

[node name="ColorRect" type="ColorRect" parent="display/Terminal"]
layout_mode = 0
offset_top = -24.0
offset_right = 704.0
color = Color(0.866667, 0, 0.866667, 1)

[node name="Label" type="Label" parent="display/Terminal"]
layout_mode = 0
offset_left = 6.0
offset_top = -20.0
offset_right = 434.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("2_bxupf")
text = "SYSTEM TERMINAL v1.0"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
